fix fire emoji alignment

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -221,6 +221,10 @@ main {
   }
 }
 
+.nowrap {
+  text-wrap: nowrap;
+}
+
 // google map
 .mapouter {
   width: 100%;
